    bin/django shell
        from south.models import *
        MigrationHistory.objects.filter(app_name='lizard_flooding_worker').delete()
    bin/django migrate flooding_worker
    bin/django loaddata flooding_worker

- Updated floding-worker to 0.6.1:
    - Replaced dependency floding_worker.Workflow to flooding_lib.Scenario.
    - created a new initial migrationschema.
	
- Updated flooding.settings due import error of PIL.Image 


1.2 (2012-06-15)
----------------

- Changed to flooding-base, flooding-lib and flooding-worker, on Git.

- Required new versions of the libraries, because of all the name changes.

- Added flooding/localsettings.py to .gitignore.

1.1.7 (2012-05-16)
------------------

- Nothing changed yet.


1.1.6 (2012-05-10)
------------------

- Increased lizard-flooding version.


1.1.5 (2012-05-04)
------------------

- Changed configuration for Nginx so that it can download files from
  /mnt/flooding, internal only (using X-Accelerated-Redirect).


1.1.4 (2012-04-24)
------------------

- Nothing changed yet.


1.1.3 (2012-03-27)
------------------

- Nothing changed yet.


1.1.2 (2012-03-07)
------------------

- pinned new versino of lizard-flooding (1.17), solved a bug during saving


1.1.1 (2012-03-06)
------------------

- Correct SYMBOLS_DIR, GISDATA settings.


1.1 (2012-03-02)
----------------

- pinned new version of lizard-flooding (1.16)

- added new var directory for generated icons

- changed mount dirs in settings.py


1.0.6 (2012-03-01)
------------------

- removed a lot of unused files form weblib

- added django debug bar

- removed CSRF middleware

- pinned new version of lizard-flooding (1.15)


1.0.5 (2012-03-01)
------------------

- Nothing changed yet.


1.0.4 (2012-03-01)
------------------

- Changed production database settings. Removed apache config files.


1.0.3 (2012-03-01)
------------------

- Increased django-staticfiles version trying to get it to work.


1.0.2 (2012-03-01)
------------------
