@@ -29,6 +29,7 @@ eggs =
 [versions]
 flooding =
 flooding-worker=0.6.1
+flooding-lib=1.35
 
 [sources]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
